--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,12 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Detect Runner IP
+        run: echo "MAIN_IP=$(ip addr show | grep 'inet ' | grep -v '127.0.0.1' | awk '{print $2}' | cut -f1 -d'/' | head -n 1)" >> $GITHUB_ENV
+
+      - name: Print Runner IP
+        run: echo $MAIN_IP
+
       - name: Pull BindPlane
         run: docker pull ghcr.io/observiq/bindplane-ee:${{ matrix.bindplane_versions }}
 
@@ -32,7 +38,7 @@ jobs:
             --name bindplane \
             -e BINDPLANE_USERNAME=admin \
             -e BINDPLANE_PASSWORD=admin \
-            -e BINDPLANE_REMOTE_URL=http://localhost:3001 \
+            -e BINDPLANE_REMOTE_URL=http://${MAIN_IP}:3001 \
             -e BINDPLANE_SESSION_SECRET=2c23c9d3-850f-4062-a5c8-3f9b814ae144 \
             -e BINDPLANE_SECRET_KEY=8a5353f7-bbf4-4eea-846d-a6d54296b781 \
             -e BINDPLANE_LOG_OUTPUT=stdout \
@@ -50,7 +56,7 @@ jobs:
           #
           # Remote url will never be localhost when running this action. In this
           # case, bindplane is literally running within the runner instance.
-          remote_url: http://localhost:3001
+          remote_url: http://${{ env.MAIN_IP }}:3001
           username: admin
           password: admin
           destination_path: test/resources/destinations
