--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,11 @@ permissions:
   # Allow action to write raw configs back to the repository.
   contents: write
 
+# Run commits in order to prevent out of order write back commits.
+concurrency:
+  group: ${{ github.head_ref || github.ref_name }}
+  cancel-in-progress: false
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -22,30 +27,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Detect Runner IP
-        run: echo "MAIN_IP=$(ip addr show | grep 'inet ' | grep -v '127.0.0.1' | awk '{print $2}' | cut -f1 -d'/' | head -n 1)" >> $GITHUB_ENV
-
-      - name: Print Runner IP
-        run: echo $MAIN_IP
-
-      - name: Pull BindPlane
-        run: docker pull ghcr.io/observiq/bindplane-ee:${{ matrix.bindplane_versions }}
-
-      - name: Start BindPlane
-        run: |
-          docker run \
-            -d \
-            --name bindplane \
-            -e BINDPLANE_USERNAME=admin \
-            -e BINDPLANE_PASSWORD=admin \
-            -e BINDPLANE_REMOTE_URL=http://${MAIN_IP}:3001 \
-            -e BINDPLANE_SESSION_SECRET=2c23c9d3-850f-4062-a5c8-3f9b814ae144 \
-            -e BINDPLANE_SECRET_KEY=8a5353f7-bbf4-4eea-846d-a6d54296b781 \
-            -e BINDPLANE_LOG_OUTPUT=stdout \
-            -e BINDPLANE_ACCEPT_EULA=true \
-            -p 3001:3001 \
-            ghcr.io/observiq/bindplane-ee:${{ matrix.bindplane_versions }}
-
       - name: Run BindPlane Action
         uses: jsirianni/bindplane-op-action@dev
         with:
@@ -56,7 +37,3 @@ jobs:
           configuration_output_dir: otel
           configuration_output_branch: main
           token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Debug Container Logs
-        if: always()
-        run: docker logs bindplane
