enable config write back

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,3 +37,4 @@ jobs:
           configuration_output_dir: otel
           target_branch: main
           token: ${{ secrets.GITHUB_TOKEN }}
+          enable_otel_config_write_back: true
