--- a/resources/destinations/resource.yaml
+++ b/resources/destinations/resource.yaml
@@ -34,7 +34,7 @@ spec:
         - name: key_file
           value: ""
         - name: retry_on_failure_enabled
-          value: true
+          value: false
         - name: retry_on_failure_initial_interval
           value: 5
         - name: retry_on_failure_max_interval
@@ -42,13 +42,13 @@ spec:
         - name: retry_on_failure_max_elapsed_time
           value: 300
         - name: sending_queue_enabled
-          value: true
+          value: false
         - name: sending_queue_num_consumers
           value: 10
         - name: sending_queue_queue_size
           value: 5000
         - name: persistent_queue_enabled
-          value: true
+          value: false
         - name: persistent_queue_directory
           value: $OIQ_OTEL_COLLECTOR_HOME/storage
 status:
@@ -90,7 +90,7 @@ spec:
         - name: compression
           value: gzip
         - name: retry_on_failure_enabled
-          value: true
+          value: false
         - name: retry_on_failure_initial_interval
           value: 5
         - name: retry_on_failure_max_interval
@@ -98,13 +98,13 @@ spec:
         - name: retry_on_failure_max_elapsed_time
           value: 300
         - name: sending_queue_enabled
-          value: true
+          value: false
         - name: sending_queue_num_consumers
           value: 10
         - name: sending_queue_queue_size
           value: 5000
         - name: persistent_queue_enabled
-          value: true
+          value: false
         - name: persistent_queue_directory
           value: $OIQ_OTEL_COLLECTOR_HOME/storage
 status:
@@ -161,17 +161,17 @@ spec:
         - name: key_file
           value: ""
         - name: retry_on_failure_enabled
-          value: true
+          value: false
         - name: num_workers
           value: 0
         - name: sending_queue_enabled
-          value: true
+          value: false
         - name: sending_queue_num_consumers
           value: 10
         - name: sending_queue_queue_size
           value: 5000
         - name: persistent_queue_enabled
-          value: true
+          value: false
         - name: persistent_queue_directory
           value: $OIQ_OTEL_COLLECTOR_HOME/storage
 status:
